--- a/Flask_Learn/templates/about.html
+++ b/Flask_Learn/templates/about.html
@@ -11,8 +11,20 @@
 
     <div class="bg-white-200">
         <div class="py-5 my-5 mx-2">
-            <div class="container">
+            <div class="container mx-5">
                 <h1 class="text-center font-bold text-2xl">About</h1>
+                <div class="flex mx-auto justify-around">
+                    <div class="mx-10 py-5">
+                        <h5>Hello World</h5>
+                    </div>
+
+                    <div class="mx-10 py-5">
+                        <h5>Hello World</h5>
+                    </div>
+                </div>
+
+            
+                
             </div>
         </div>
     </div>
