--- a/Flask_Learn/templates/index.html
+++ b/Flask_Learn/templates/index.html
@@ -5,16 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,500&display=swap" rel="stylesheet">
     <title>PREDIKSI BERAT</title>
 </head>
-<body>
+<body style="font-family: 'Montserrat', sans-serif;">
 
-    <div class="bg-white-200">
-        <div class="py-5 my-5 mx-2">
+    <div class="bg-gradient-to-r from-indigo-500 to-blue-500 " style="height:100vh">
+        <div class="pt-8 mx-2">
             <div class="container">
-                <h1 class="text-center font-bold text-xl">Weight Prediction Based on Height and Gender</h1>
+                <div class="text-center">
+                    <h1 class=" text-xl text-white">Weight Prediction Based on Height and Gender</h1>
+                    
+                </div>
+                <hr class="mx-10">
+                
             </div>
+            
         </div>
+        <form action="" method="POST" class="pt-4">
+            <div class="grid">
+
+                <div class="flex flex-wrap justify-around ">
+                    <div class="form-check"> 
+                        <label class="text-center form-check-label block text-white" for="flexRadioDefault1">
+                            Female
+                        </label>
+                        <div class="grid place-content-center">
+                            <input class=" form-check-input appearance-none rounded h-8 w-8 border border-gray-300 bg-white checked:bg-pink-500 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left  cursor-pointer" 
+                            type="radio" name="Gender" value=0 id="female">
+                        </div>
+                        
+                    </div>
+                    
+                    <div class="form-check">
+                        <label class="text-center form-check-label block text-white" for="flexRadioDefault2">
+                            Male
+                        </label>
+                        <div class="grid place-content-center">
+                            <input 
+                            class="form-check-input appearance-none rounded h-8 w-8 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left cursor-pointer" 
+                            type="radio" name="Gender" id="male" value=1  checked>
+                        </div>
+                        
+                    </div>
+    
+                    
+                </div>
+
+                <div class="flex items-center px-5 justify-around">
+                    <div class='mb-6 w-3/6'>
+                        <label class='block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'
+                            for='grid-text-2'>Tinggi Badan (inch)</label>
+                        <input type="text"
+                            class='appearance-none block w-full bg-white text-gray-700 border border-gray-400 shadow-inner rounded-md py-3 px-4 leading-tight focus:outline-none  focus:border-gray-500'
+                            id='grid-text-2' type='text' placeholder='Tinggi Badan (inch)'
+                            name="tinggi" required>
+                    </div>
+        
+                    <div class="">
+                        <button
+                            class="appearance-none bg-gray-200 text-gray-900 px-2 py-1 shadow-sm border border-gray-400 rounded-md hover:bg-gray-300"
+                            type="submit">Prediksi
+                        </button>
+                    </div>
+                </div>
+                
+            </div>
+            
+            
+            
+        </form>
     </div>
     
 </body>
