--- a/Flask_Learn/templates/index.html
+++ b/Flask_Learn/templates/index.html
@@ -24,59 +24,95 @@
             </div>
             
         </div>
-        <form action="" method="POST" class="pt-4">
-            <div class="grid">
-
-                <div class="flex flex-wrap justify-around ">
-                    <div class="form-check"> 
-                        <label class="text-center form-check-label block text-white" for="flexRadioDefault1">
-                            Female
-                        </label>
-                        <div class="grid place-content-center">
-                            <input class=" form-check-input appearance-none rounded h-8 w-8 border border-gray-300 bg-white checked:bg-pink-500 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left  cursor-pointer" 
-                            type="radio" name="Gender" value=0 id="female">
-                        </div>
-                        
-                    </div>
-                    
-                    <div class="form-check">
-                        <label class="text-center form-check-label block text-white" for="flexRadioDefault2">
-                            Male
-                        </label>
-                        <div class="grid place-content-center">
-                            <input 
-                            class="form-check-input appearance-none rounded h-8 w-8 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left cursor-pointer" 
-                            type="radio" name="Gender" id="male" value=1  checked>
-                        </div>
-                        
-                    </div>
-    
-                    
-                </div>
-
-                <div class="flex items-center px-5 justify-around">
-                    <div class='mb-6 w-3/6'>
-                        <label class='block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'
-                            for='grid-text-2'>Tinggi Badan (inch)</label>
-                        <input type="text"
-                            class='appearance-none block w-full bg-white text-gray-700 border border-gray-400 shadow-inner rounded-md py-3 px-4 leading-tight focus:outline-none  focus:border-gray-500'
-                            id='grid-text-2' type='text' placeholder='Tinggi Badan (inch)'
-                            name="tinggi" required>
-                    </div>
-        
+        <div class="flex mx-auto">
+            
+            <div class="container mx-5 bg-gray-600 rounded my-2" style="height:80vh">
+                <form action="" method="POST" class="pt-4">
                     <div class="">
-                        <button
-                            class="appearance-none bg-gray-200 text-gray-900 px-2 py-1 shadow-sm border border-gray-400 rounded-md hover:bg-gray-300"
-                            type="submit">Prediksi
-                        </button>
-                    </div>
-                </div>
+        
+                        <div class="flex flex-wrap justify-around items-center">
+                            
+    
+                            <h1 class="text-white">Gender :</h1>
+                            <div class="form-check flex items-center"> 
+                                
+                                <div class="pr-3">
+                                    <input class=" form-check-input appearance-none rounded h-8 w-8 border border-gray-300 bg-white checked:bg-pink-500 checked:border-blue-600 focus:outline-none transition duration-200 align-top bg-no-repeat bg-center bg-contain float-left  cursor-pointer" 
+                                    type="radio" name="Gender" value=0 id="female">
+                                </div>
+                                <label class="text-center form-check-label block text-white" for="flexRadioDefault1">
+                                    Female
+                                </label>
+                                
+                            </div>
+                            
+                            <div class="form-check flex items-center">
+                                
+                                <div class="pr-3">
+                                    <input 
+                                    class="form-check-input appearance-none rounded h-8 w-8 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 align-top bg-no-repeat bg-center bg-contain float-left cursor-pointer" 
+                                    type="radio" name="Gender" id="male" value=1  checked>
+                                </div>
+                                <label class="text-center form-check-label block text-white" for="flexRadioDefault2">
+                                    Male
+                                </label>
+                            </div>
+            
+                            
+                        </div>
+        
+                        <div class="items-center px-5 pt-5">
+                            <div class='mb-6 w-full'>
+                                <label class='block uppercase tracking-wide text-white text-xs mb-2'
+                                    for='grid-text-2'>Tinggi Badan (inch)</label>
+                                <input type="text"
+                                    class='appearance-none block w-full bg-white text-gray-700 border border-gray-400 shadow-inner rounded-md py-3 px-4 leading-tight focus:outline-none  focus:border-gray-500'
+                                    id='grid-text-2' type='text' placeholder='Tinggi Badan (inch)'
+                                    name="tinggi" required>
+                            </div>
                 
+                            <div class="flex flex-row-reverse">
+                                <button
+                                    class="appearance-none bg-gray-200 text-gray-900 px-2 py-1 shadow-sm border border-gray-400 rounded-md hover:bg-gray-300"
+                                    type="submit">Prediksi
+                                </button>
+                            </div>
+                        </div>
+                        
+                        
+                    </div>
+                    
+                    
+                    
+                </form>
+                <div class="mx-auto px-5 py-2">
+                    <a class="text-teal-500 hover:text-blue-500 py-2 px-1 bg-white rounded " href="https://bit.ly/3LRU8Et">Dataset used</a>
+                </div>
             </div>
             
-            
-            
-        </form>
+            <div class="container my-2 mx-5">
+                
+                <h1 class="text-white text-center">Model Result</h1>
+                <div class="grid">
+                    <img class="place-self-center border-x-4 rounded border-black" src="static/plot.png" alt="Plot">
+                </div>
+                {% if result is defined %}
+                <div class="prediction-result w-full max-w-2xl p-6">
+                    <h2 class="text-2xl text-white">Hasil Prediksi:</h2> 
+                    <div class="user-input container flex">
+                        <h5 class="text-white pr-2">{{gender}}</h5>
+                        <h5 class="text-white ">{{height}} inch</h5>
+                    </div>
+                    
+                    <!-- <img class="my-3" src="static/img/iris-flower.png" alt="iris flower"> -->
+                    <h2 class="mx-auto text-3xl text-center px-2 py-2 bg-gray-300 rounded rounded-full mt-2">{{result}}</h1>
+                </div>
+                {% endif %}
+                
+            </div>
+
+        </div>
+        
     </div>
     
 </body>
